feature pedido lista por comanda
